# streamlitfront

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/streamlitfront/: base.html  pydantic_widgets.html  session_state.html  spec_maker.html  tools.html  util.html
_modules/streamlitfront/elements/: elements.html
_modules/streamlitfront/examples/: crude.html  custom_output.html  experimentation.html  handle_none_params.html  mk_app.html  pipeline_maker.html  simple.html  tw_data_binding.html  util.html  various_input_kinds.html
_modules/streamlitfront/scrap/: alt_renderer.html  front_routing_proposals.html  nested_select.html
_modules/streamlitfront/tests/: dummy_app.html  test_pydantic_widgets.html
_sources/: table_of_contents.rst.txt
_sources/module_docs/streamlitfront/: app_maker.rst.txt  page_funcs.rst.txt  pydantic_widgets.rst.txt  session_state.rst.txt  spec_maker.rst.txt  util.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/streamlit/: delta_generator.html
docs/_modules/streamlitfront/: app_maker.html  base.html  session_state.html  spec_maker.html  util.html
docs/_sources/: index.rst.txt  table_of_contents.rst.txt
docs/_sources/module_docs/: streamlitfront.rst.txt
docs/_static/: documentation_options.js
docs/module_docs/: streamlitfront.html
docs/module_docs/streamlitfront/: app_maker.html  base.html  elements.html  page_funcs.html  run_app.html  session_state.html  spec_maker.html  types.html  util.html
docsrc/: table_of_contents.rst
docsrc/module_docs/streamlitfront/: base.rst  data_binding.rst  run_app.rst  tools.rst  types.rst
module_docs/: streamlitfront.html
module_docs/streamlitfront/: app_maker.html  base.html  data_binding.html  elements.html  page_funcs.html  pydantic_widgets.html  run_app.html  session_state.html  spec_maker.html  tools.html  types.html  util.html
module_docs/streamlitfront/elements/: elements.html  js.html  tree_maker.html
module_docs/streamlitfront/examples/: costing_inflexibility.html  crude.html  custom_output.html  dag_app.html  data_binding.html  data_prep.html  edge_impulse_like.html  experimentation.html  graph_component.html  handle_none_params.html  issues.html  kaggle_front.html  mk_app.html  simple.html  (+9 more)
streamlitfront/: __init__.py  app_maker.py  base.py  data_binding.py  page_funcs.py  pydantic_widgets.py  run_app.py  session_state.py  spec_maker.py  tools.py  types.py  util.py
streamlitfront/data/: streamlit_elements.txt
streamlitfront/elements/: elements.py  tree_maker.py
streamlitfront/examples/: audiostream.py  costing_inflexibility.py  crude.py  custom_output.py  dag_app.py  data_binding.py  data_prep.py  edge_impulse_like.py  experimentation.py  graph_component.py  handle_none_params.py  issues.py  kaggle_front.py  mk_app.py  pipeline_maker.py  pipeline_maker_2.py  pos_key_args.py  simple.py  simple_ml_1.py  simple_real_audio_ml.py  store_filtering.py  tw_data_binding.py  util.py  various_input_kinds.py
streamlitfront/scrap/: alt_renderer.py  front_routing_proposals.py  nested_select.py  notebook.ipynb
streamlitfront/tests/: common.py  conftest.py  dispatch_funcs_test.py  dummy_app.py  fake_app.py  notebook.ipynb  smoke_test.py  test_app.py  test_base.py  test_pydantic_widgets.py  test_requirements.txt  use_case_test.py  use_case_test_old.py
tests/: test_smoke.py
(+134 files in other folders)
