[metadata]
name = streamlitfront
version = 0.1.3
url = https://github.com/i2mint/streamlitfront
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Generate streamlit frontends from python functions
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = streamlitfront

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    front
    i2
    pydantic
	streamlit
    streamlit_pydantic
